// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render HEX_CONTROL correctly with default value to empty 1`] = `
.c6 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  color: rgb(0,151,208);
}

.c6:active {
  color: rgb(0,144,198);
}

.c4 {
  margin: 0;
  font-size: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > * {
  margin-right: 5px;
}

.c7 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c7:hover {
  background-color: rgb(0,151,208);
}

.c7:active {
  background-color: rgb(0,144,198);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 5px 10px;
  color: #353630;
  border-color: #D1D2D3;
  font-size: 1rem;
}

.c2:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c2::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2:disabled {
  background-color: #FFFFFF;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  height: 100%;
  min-height: 4em;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "HEX_CONTROL",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <ControlString
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Hex only"
    value=""
  >
    <ControlString__Container>
      <div
        className="c0"
      >
        <ControlString__StyledTextarea
          onChange={[Function]}
          placeholder="Hex only"
          value=""
        >
          <Textarea
            className="c1"
            kind="primary"
            onChange={[Function]}
            placeholder="Hex only"
            value=""
          >
            <textarea
              className="c1 c2"
              kind="primary"
              onChange={[Function]}
              placeholder="Hex only"
              value=""
            />
          </Textarea>
        </ControlString__StyledTextarea>
        <ControlString__ButtonWrapper>
          <div
            className="c3"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c4"
                  onClick={[Function]}
                >
                  <div
                    className="c4"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c5"
                        color="primary"
                      >
                        <a
                          className="c5 c6"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c7"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlString__ButtonWrapper>
      </div>
    </ControlString__Container>
  </ControlString>
</DataChannelAdapter>
`;

exports[`should render HEX_CONTROL correctly with empty string 1`] = `
.c6 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  color: rgb(0,151,208);
}

.c6:active {
  color: rgb(0,144,198);
}

.c4 {
  margin: 0;
  font-size: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > * {
  margin-right: 5px;
}

.c7 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c7:hover {
  background-color: rgb(0,151,208);
}

.c7:active {
  background-color: rgb(0,144,198);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 5px 10px;
  color: #353630;
  border-color: #D1D2D3;
  font-size: 1rem;
}

.c2:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c2::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2:disabled {
  background-color: #FFFFFF;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  height: 100%;
  min-height: 4em;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "HEX_CONTROL",
      "values": Object {
        "value": "",
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlString
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Hex only"
    value=""
  >
    <ControlString__Container>
      <div
        className="c0"
      >
        <ControlString__StyledTextarea
          onChange={[Function]}
          placeholder="Hex only"
          value=""
        >
          <Textarea
            className="c1"
            kind="primary"
            onChange={[Function]}
            placeholder="Hex only"
            value=""
          >
            <textarea
              className="c1 c2"
              kind="primary"
              onChange={[Function]}
              placeholder="Hex only"
              value=""
            />
          </Textarea>
        </ControlString__StyledTextarea>
        <ControlString__ButtonWrapper>
          <div
            className="c3"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c4"
                  onClick={[Function]}
                >
                  <div
                    className="c4"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c5"
                        color="primary"
                      >
                        <a
                          className="c5 c6"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c7"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlString__ButtonWrapper>
      </div>
    </ControlString__Container>
  </ControlString>
</DataChannelAdapter>
`;

exports[`should render HEX_CONTROL correctly with value 1`] = `
.c6 {
  color: #00A1DE;
  -webkit-transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c6:hover {
  color: rgb(0,151,208);
}

.c6:active {
  color: rgb(0,144,198);
}

.c4 {
  margin: 0;
  font-size: 1rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 > * {
  margin-right: 5px;
}

.c7 {
  border-width: 1px;
  border-style: solid;
  outline: none;
  box-sizing: border-box;
  -webkit-transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  transition: background-color cubic-bezier(0.47,0,0.75,0.72) 0.3s;
  line-height: 0;
  cursor: pointer;
  background-color: #00A1DE;
  color: #FFFFFF;
  border-radius: 3px;
  width: initial;
  min-width: 80px;
  height: 32px;
  padding: 6px 15px;
  font-size: 1rem;
  border-color: rgb(0,130,179);
}

.c7:hover {
  background-color: rgb(0,151,208);
}

.c7:active {
  background-color: rgb(0,144,198);
}

.c2 {
  box-sizing: border-box;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-radius: 3px;
  outline: 0;
  padding: 5px 10px;
  color: #353630;
  border-color: #D1D2D3;
  font-size: 1rem;
}

.c2:focus {
  border-color: #00A1DE;
  box-shadow: 0 0 3px 0 rgba(0,161,222,0.5);
}

.c2::-webkit-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2::-moz-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2:-ms-input-placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2::placeholder {
  opacity: 1;
  color: #D1D2D3;
}

.c2:disabled {
  background-color: #FFFFFF;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c1 {
  height: 100%;
  min-height: 4em;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {},
      "id": "id",
      "type": "HEX_CONTROL",
      "values": Object {
        "value": "michaelhsu",
      },
    }
  }
  eventHandler={[Function]}
>
  <ControlString
    onChange={[Function]}
    onClear={[Function]}
    onSubmit={[Function]}
    placeholder="Hex only"
    value="michaelhsu"
  >
    <ControlString__Container>
      <div
        className="c0"
      >
        <ControlString__StyledTextarea
          onChange={[Function]}
          placeholder="Hex only"
          value="michaelhsu"
        >
          <Textarea
            className="c1"
            kind="primary"
            onChange={[Function]}
            placeholder="Hex only"
            value="michaelhsu"
          >
            <textarea
              className="c1 c2"
              kind="primary"
              onChange={[Function]}
              placeholder="Hex only"
              value="michaelhsu"
            />
          </Textarea>
        </ControlString__StyledTextarea>
        <ControlString__ButtonWrapper>
          <div
            className="c3"
          >
            <ButtonClear
              onClick={[Function]}
            >
              <P
                onClick={[Function]}
              >
                <Component
                  className="c4"
                  onClick={[Function]}
                >
                  <div
                    className="c4"
                    onClick={[Function]}
                  >
                    <ButtonClear__StyledA>
                      <A
                        className="c5"
                        color="primary"
                      >
                        <a
                          className="c5 c6"
                          color="primary"
                        >
                          <IconDelete
                            size="1em"
                          >
                            <svg
                              fill="currentColor"
                              height="1em"
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width="1em"
                            >
                              <path
                                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm9-10h1v10h-1V9zm-4 0h2v10h-2V9zM8 9h1v10H8V9zm7.5-5l-1-1h-5l-1 1H5v2h14V4h-3.5z"
                              />
                            </svg>
                          </IconDelete>
                          Clear
                        </a>
                      </A>
                    </ButtonClear__StyledA>
                  </div>
                </Component>
              </P>
            </ButtonClear>
            <Button
              active={false}
              block={false}
              component="button"
              disabled={false}
              kind="primary"
              onClick={[Function]}
              round={false}
              size="normal"
              square={false}
            >
              <BaseComponent
                active={false}
                block={false}
                className="c7"
                component="button"
                disabled={false}
                kind="primary"
                onClick={[Function]}
                round={false}
                size="normal"
                square={false}
              >
                <button
                  className="c7"
                  onClick={[Function]}
                >
                  Ok
                </button>
              </BaseComponent>
            </Button>
          </div>
        </ControlString__ButtonWrapper>
      </div>
    </ControlString__Container>
  </ControlString>
</DataChannelAdapter>
`;
